while I'm in here, fix the numbered list # spacing

--- a/blocks/numbered-list-block/features/numbered-list/numbered-list.scss
+++ b/blocks/numbered-list-block/features/numbered-list/numbered-list.scss
@@ -9,7 +9,7 @@
   justify-content: space-between;
 
   .list-item-number {
-    flex: 0 0 calculateRem(20px);
+    flex: 0 0 calculateRem(40px);
     color: $ui-dark-secondary-color;
     font-size: calculateRem(20px);
     font-weight: bold;
